...
                            <constraint firstItem="2hB-ye-To9" firstAttribute="trailing" secondItem="PQr-Ze-W5v" secondAttribute="trailing" id="anh-mR-OJj"/>
                            <constraint firstItem="TxQ-qb-IX4" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" id="bZM-ys-X0e"/>
                            <constraint firstItem="2hB-ye-To9" firstAttribute="bottom" secondItem="PQr-Ze-W5v" secondAttribute="bottom" id="eG4-cg-Jcl"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Trending" image="star" catalog="system" id="acW-dT-cKf"/>
                    <connections>
                        <outlet property="tableView" destination="2hB-ye-To9" id="00r-54-0ve"/>
                        <outlet property="viewManager" destination="a4Z-62-hrL" id="BHa-cB-2QI"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="NDk-cv-Gan" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="JgO-Fn-dHn"/>
                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="wrench" catalog="system" id="cPa-gy-q4n"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="750" y="360"/>
        </scene>
        <!--Tab Bar Controller-->
...
